--- a/.github/workflows/update-kev.yaml
+++ b/.github/workflows/update-kev.yaml
@@ -16,8 +16,10 @@ jobs:
           fetch-depth: 0
 
       - name: Scrape CISA KEV
-        run: curl -f --silent  --output known_exploited_vulnerabilities.json https://www.cisa.gov/sites/default/files/feeds/known_exploited_vulnerabilities.json
-
+        run: |
+          curl -L -o known_exploited_vulnerabilities.json \
+          -H "User-Agent: Mozilla/5.0 (Linux; Android 6.0; Nexus 5 Build/MRA58N) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/131.0.0.0 Mobile Safari/537.36" \
+          https://www.cisa.gov/sites/default/files/feeds/known_exploited_vulnerabilities.json
       - name: Commit and push if it changed
         run: |-
           git config user.name "AboutCode Automation"
